--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="add_new_item_description">يمكنك  إضافة ملاحظة إلى القائمة و اختيار نوع ولون الملاحظة.</string>
     <string name="add">اضافة</string>
     <string name="add_note_text">أضف ملاحظة</string>
+    <string name="confirm"> تعم </string>
+    <string name="cancel">   لا </string>
 </resources>
