--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_note_text">أضف ملاحظة</string>
     <string name="confirm"> تعم </string>
     <string name="cancel">   لا </string>
+    <string name="update">تحديث</string>
 </resources>
