upload final app note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Notes App</string>
+    <string name="app_name"> تطبيق مذكرة </string>
     <string name="add_new_item_description">يمكنك  إضافة ملاحظة إلى القائمة و اختيار نوع ولون الملاحظة.</string>
     <string name="add">اضافة</string>
     <string name="add_note_text">أضف ملاحظة</string>
@@ -11,4 +11,7 @@
     <string name="success_message_notes">   تم تحديث المذكرة بنجاح </string>
     <string name="not_permission_select_photo">عذرا لا تملك صلاحية لدخول الى معرض الصور</string>
     <string name="select_photo">اختر الصورة</string>
+    <string name="validate_message_note_simple">لنص مطلوب  للمذكرة البسيطة</string>
+    <string name="validate_message_note_text">النص مطلوب</string>
+    <string name="select_data_note">الرجاء اضافة  بينات الى مذكرة</string>
 </resources>
